# lisper-bridge

./: Cargo.toml
crates/epc/: Cargo.toml
crates/epc/src/: client.rs  handler.rs  lib.rs  server.rs  types.rs
crates/lisper-bridge/: Cargo.toml
src/: main.rs
src/epc/: client.rs  mod.rs  protocol.rs  server.rs
